--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./font.css">
-    <title>Document</title>
+    <title>Banavaz</title>
 </head>
 
 <body>
